# DataWars202x

./: .gitignore  INSTRUCTIONS.md  PREPTALK23.md  README  README.md  new_op.sh  practice01.html  pyproject.toml
2023/: INSTRUCTIONS.md  new_op.sh
2023/oqdrachtx/aanval1/: opdracht.txt
2023/oqdrachtx/aanval2/: opdracht.txt
2023/oqdrachtx/intel2_Supernova/: opdracht.txt
2023/oqdrachtx/intel5/: opdracht.txt
2023/oqdrachtx/intel6/: opdracht.txt
2023/oqdrachtx/intel7/: opdracht.txt
2023/oqdrachtx/verdediging1_interceptie/: opdracht.txt
2023/oqdrachtx/verdediging2_Interceptie/: opdracht.txt
2023/oqdrachtx/verdediging4/: 1_numbers.txt  2_numbers.txt  4_numbers.txt  5_numbers.txt  run.py
2023/oqdrachtx/verdediging6/: input.txt  opdracht.txt
2023/oqdrachtx/verdediging7/: opdracht.txt
2023/oqdrachtx/verdediging9/: opdracht.txt
2023/prep/: pyproject.toml
2023/prep/practice01_files/: css
2023/solution01/: solution.py
2024/oqdrachtx/: DataWars - Weapon Factory pt 1 and 2.ipynb  assignments.json
2024/oqdrachtx/Aanval_6/: missing.txt
opdrachten/aanval1/: input.csv
opdrachten/intel1_Tankstations/: input.txt  knn.py  notes.txt  opdracht.txt
opdrachten/intel3_Hostiledrone/: opdracht.txt
opdrachten/intel4/: opdracht.txt
opdrachten/verdediging3/: opdracht.txt
opdrachten/verdediging4/: 0_numbers.txt  3_numbers.txt  run.py
opdrachten/verdediging5/: input.txt  opdracht.txt
opdrachten/verdediging8/: opdracht.txt
parallelism/: multiprocess.py
python_parallel/: cube.py  multithread.py
solution01/: utils.py
(+77 files in other folders)
