[tool.poetry]
name = "datawars23"
version = "0.1.0"
description = ""
authors = ["3lLobo <flocwolf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
